[package]
name = "audiobook2renpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
epub = "2.1.1"
rayon = "1.8.0"
scraper = "0.17.1"
srtlib = "0.1.7"
textdistance = "1.0.2"
