[package]
name = "audiobook2renpy"
version = "0.1.0"
edition = "2021"

[lib]
name = "audiobook_convert"           # The name of the target.
path = "src/process.rs"    # The source file of the target.
edition = "2021"       # The edition of the target.

[dependencies]
ctrlc = { version = "3.4.1", features = ["termination"] }
epub = "2.1.1"
getch = "0.3.1"
rayon = "1.8.0"
relm4 = "0.6.2"
relm4-components = "0.6.2"
scraper = "0.18.1"
srtlib = "0.1.7"
textdistance = "1.0.2"
regex = "1.10.2"
dircpy = "0.3.15"
itertools = "0.12.1"